--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
     <div id="app">
         <!-- Tuka se vgnezduva se od React -->
     </div>
-    <script src="./bundle.js"></script>
+    <script src="./bundle.js">
+    </script>
 
     <!-- div#app -->
 </body>
