--- a/src/index.html
+++ b/src/index.html
@@ -4,24 +4,34 @@
 <!-- doc-tab -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- <style>
         
         </style> -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My App</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/10a00b13bf.js"></script>
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
+      rel="stylesheet"
+    />
+    <link
+      href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/10a00b13bf.js"></script>
+  </head>
+  <body>
     <div id="app">
-        <!-- Tuka se vgnezduva se od React -->
+      <!-- Tuka se vgnezduva se od React -->
     </div>
-    <script src="./bundle.js">
-    </script>
+    <script src="./bundle.js"></script>
 
     <!-- div#app -->
-</body>
+  </body>
 </html>
